# trustrender

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_server.py  bench_typst.py  bench_weasyprint.py  font_swap_results.md  font_swap_test.py  gen_large_fixtures.py  invoice_weasyprint.html  load_test.py  load_test_results.md  pagination_soak.py  pagination_soak_results.md  results.md  soak_results.md  soak_test.py
docs/: CANONICAL_INVOICE_CONTRACT.md  claims-matrix.md  einvoice-claims-audit.md  einvoice-scope.md  fonts.md  known-limits.md  pagination-proof.md  provenance.md  server.md  soak-proof.md  templates.md  trust-by-default-proof.md  ugly-data-findings.md  validation.md  zugferd-prototype.md
examples/: _typeset_dnxyz7cw.typ  creditnote_data.json  demo_shopify.json  demo_shopify_ready.json  demo_stripe.json  demo_stripe_ready.json  einvoice.j2.typ  einvoice_data.json  hello.typ  invoice.j2.typ  invoice_1000_data.json  invoice_data.json  invoice_long_data.json  invoice_multipage.typ  invoice_simple.typ  invoice_sysinputs.typ  letter.j2.typ  letter_data.json  receipt.j2.typ  receipt_data.json  render_test.py  report.j2.typ  report_long_data.json  request_invoice.json  start_to_finish.py  statement.j2.typ  statement_1000_data.json  statement_data.json  statement_long_data.json  validate_before_embed.py  validate_stripe.py  with_drafthorse_facturx.py
examples/fragments/: footer_page.j2.typ  header_logo.j2.typ
src/formforge/: __init__.py  cli.py  contract.py  dashboard.py  doctor.py  engine.py  errors.py  filters.py  fingerprint.py  provenance.py  readiness.py  regression.py  semantic.py  server.py  templates.py  trace.py  zugferd.py
src/formforge/playground/: index.html
src/formforge/playground/assets/: index-2GCbEZ-R.js  index-B-keXL9H.js  index-Bfogtv7p.js  index-Bj-RwLGQ.js  index-Bozzhzww.css  index-Bszti-CK.css  index-C1aAFI6t.css  index-Cf25aUdv.css  index-CovazZVh.js  index-DJSENv9t.js  index-DzsTAY3J.js  index-UiG_mR5f.js  index-ek4mCU0E.css  index-fYPu36z8.js  (+1 more)
src/trustrender/: __init__.py  cli.py  contract.py  dashboard.py  doctor.py  engine.py  errors.py  filters.py  fingerprint.py  invoice_aliases.py  invoice_ingest.py  invoice_schema.py  provenance.py  readiness.py  regression.py  semantic.py  server.py  templates.py  trace.py  zugferd.py
src/trustrender/adapters/: __init__.py  shopify.py  stripe.py
src/trustrender/builtin_templates/: einvoice.j2.typ  einvoice_data.json  invoice.j2.typ  invoice_data.json  letter.j2.typ  receipt.j2.typ  receipt_data.json  report.j2.typ  report_data.json  statement.j2.typ  statement_data.json
src/trustrender/playground/: index.html
src/typeset/: __init__.py  cli.py  engine.py  errors.py  filters.py  server.py  templates.py
tests/: run_real_payload.py  test_adapters.py  test_adversarial_corpus.py  test_audit_e2e.py  test_cli.py  test_contract.py  test_doctor.py  test_engine.py  test_error_pipeline.py  test_errors.py  test_filters.py  test_fingerprint.py  test_fingerprint_stress.py  test_fonts.py  test_invoice_ingest.py  test_pagination.py  test_provenance.py  test_readiness.py  test_real_payloads.py  test_regression.py  test_regression_stress.py  test_render.py  test_schema.py  test_semantic.py  test_semantic_stress.py  test_server.py  test_templates.py  test_trace.py  test_ugly_data.py  test_ugly_data_pressure.py  test_zugferd.py
tests/fixtures/: bad_font.j2.typ  bad_jinja_syntax.j2.typ  bad_syntax.typ  code_mode_injection.j2.typ  invoice_bad_data.json  missing_image.j2.typ  missing_image_static.typ  simple.j2.typ  simple.json  simple.typ  undefined_var.j2.typ  with_image.j2.typ
tests/fixtures/adapters/: shopify_incomplete.json  shopify_order.json  stripe_incomplete.json  stripe_invoice.json
tests/fixtures/adversarial_corpus/: bad_arithmetic.json  empty_items.json  extra_junk.json  flat_billing.json  generic_erp.json  minimal_valid.json  mixed_casing.json  nested_unwrap.json  no_invoice_number.json  no_sender.json
tests/fixtures/examples/: broken_invoice.json
tests/fixtures/real_invoices/: csv_flat_raw.json  freshbooks_raw.json  quickbooks_raw.json  stripe_raw.json  xero_raw.json
website/: .env.production  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
website/src/: App.jsx  CodeEditor.jsx  LogoExplore.jsx  error-resolver.js  index.css  issueRegistry.js  json-path-index.js  patchUtils.js
website/tests/: patchUtils.test.js  workspace.spec.js
(+38 files in other folders)
