[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trustrender"
version = "0.1.8"
description = "Fast, code-first PDF generation from structured data. No browser, no Chromium."
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: Markup",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typst>=0.14",
    "jinja2>=3.1",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "drafthorse>=2024.0",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://trustrender.dev"
Documentation = "https://trustrender.dev"
Source = "https://github.com/verityengine/trustrender"
Issues = "https://github.com/verityengine/trustrender/issues"
Changelog = "https://github.com/verityengine/trustrender/releases"

[project.scripts]
trustrender = "trustrender.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "factur-x>=3.0",
]
zugferd = [
    "factur-x>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trustrender = ["playground/**/*", "fonts/**/*", "builtin_templates/*"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
