[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trustrender"
version = "0.3.3"
description = "Validate and normalize Stripe, Shopify, and custom billing data for Factur-X/ZUGFeRD"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drafthorse>=2024.0",
]

[project.urls]
Homepage = "https://trustrender.dev"
Documentation = "https://trustrender.dev"
Source = "https://github.com/verityengine/trustrender"
Issues = "https://github.com/verityengine/trustrender/issues"
Changelog = "https://github.com/verityengine/trustrender/releases"

[project.scripts]
trustrender = "trustrender.cli:main"

[project.optional-dependencies]
render = [
    "typst>=0.14",
    "jinja2>=3.1",
    "pypdf>=4.0",
]
serve = [
    "starlette>=0.40",
    "uvicorn>=0.30",
]
zugferd = [
    "factur-x>=3.0",
]
all = [
    "trustrender[render,serve,zugferd]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "factur-x>=3.0",
    "trustrender[all]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trustrender = ["playground/**/*", "fonts/**/*", "builtin_templates/*"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
